manual correction